[package]
name = "cosmos_xenna"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_cosmos_xenna"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py312", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.5", features = ["v4", "serde"] }
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread"] }
axum = "0.7.9"
# disable-features is set to avoid needing to download openssl
reqwest = { version = "0.12.28", default-features = false, features = [
    "blocking",
    "json",
] }
thiserror = "1.0.69"
env_logger = "0.11.11"
log = "0.4.33"
crossbeam-channel = "0.5.16"
tempfile = "3.27.0"
object_store = { version = "0.14.1", features = ["aws"] }
url = "2.5.8"
futures = "0.3.32"
retry = "2.2.0"
tokio-retry = "0.3"
portpicker = "0.1.1"
approx = "0.5.1"
good_lp = { version = "1", default-features = false, features = ["microlp"] }
comfy-table = "7.2.2"
itertools = "0.12"
rand = "0.9.5"
fixed = { version = "1.31.0", features = ["serde"] }

[[bin]]
name = "benchmark_large_autoscaling_problem"
path = "src/benchmark_large_autoscaling_problem.rs"

[features]
# Tests which take too long when compiled without optimizations.
release-tests = []
